Bug 51266 - PIVOTTABLE: refresh -> bad numbers after refresh [regression]
Summary: PIVOTTABLE: refresh -> bad numbers after refresh [regression]
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.0.beta2
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.7.0 target:3.6.0.0.beta3
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-06-20 11:36 UTC by raal
Modified: 2012-07-05 08:27 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
testing file (13.95 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-06-20 11:36 UTC, raal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2012-06-20 11:36:22 UTC
Created attachment 63271 [details]
testing file

1 - Open attached file. File is created in OOo.
2 - Go to sheet "servisni zasahy"
3 - Right click on first pivot table-> Refresh 

Actual results:
Sum of Typ servisu=1 is 1528990992

Expected results
Sum of Typ servisu=1 is 314352
Comment 1 Markus Mohrhard 2012-06-24 16:28:29 UTC
Please don't set a bug a blocker! This is not a blocker!
Comment 2 Kohei Yoshida 2012-07-03 06:34:13 UTC
Looking into this.
Comment 3 Kohei Yoshida 2012-07-03 06:38:41 UTC
Wow.  I don't even know where that number (1528990992) comes from.
Comment 4 Kohei Yoshida 2012-07-03 06:53:43 UTC
Ah.  This is a manifestation of a bug where the pivot table calculates incorrectly when the specified data range is includes a whole bunch of empty rows.  Good catch!
Comment 5 Not Assigned 2012-07-03 11:20:15 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f2ac4ff6600a7d20a519e9ef9e6bcd8157288f63

fdo#51266: Properly set pivot item 'empty' on empty cells.
Comment 6 Not Assigned 2012-07-03 11:20:44 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6d91eaaf8695da3f0da767f2669fcc650e9a76a5&g=libreoffice-3-6

fdo#51266: Properly set pivot item 'empty' on empty cells.


It will be available in LibreOffice 3.6.
Comment 7 Kohei Yoshida 2012-07-03 11:24:22 UTC
Note that this commit alone will not fix the problem in its entirety.  There is an additional problem I need to solve which I'm currently working on.
Comment 8 Not Assigned 2012-07-05 08:25:37 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fa2b7eff2d40b6455970b521306c5961e4e3cec4

fdo#51266: Sync dimension members in several places upon refresh.
Comment 9 Not Assigned 2012-07-05 08:26:02 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fcc90b132168405e5a862fa4db8cfdcdcf632f65&g=libreoffice-3-6

fdo#51266: Sync dimension members in several places upon refresh.


It will be available in LibreOffice 3.6.
Comment 10 Kohei Yoshida 2012-07-05 08:27:22 UTC
After this commit, I'm no longer able to reproduce the bug.  I'll call it fixed.