fdo#51266: Properly set pivot item 'empty' on empty cells.

Or else it would re-use the last non-empty cell value which is wrong.

Change-Id: I3feab09a54e93150a7b6a9e9b4b540327f2ab5c5