sc/inc/dpitemdata.hxx
@@ -91,6 +91,7 @@ public:
     ~ScDPItemData();
 
     Type GetType() const;
+    void SetEmpty();
     void SetString(const rtl::OUString& rS);
     void SetString(const rtl::OUString* pS);
     void SetValue(double fVal);
